--- a/pages/get_relation_stats.html
+++ b/pages/get_relation_stats.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>GET_RELATION_STATS</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -30,7 +30,7 @@
 
     <script>
 
-        $("#empId").focus();
+        $("#db").focus();
         function validateAndGetFormData() {
             var dbVar = $("#db").val();
             if (dbVar === "") {
@@ -85,6 +85,10 @@
         }
 
         function getstats() {
+            var jsonStr = validateAndGetFormData();
+            if (jsonStr === "") {
+                return;
+            }
 
             var getReqStr = createGETRequest("90937502|-31949291089260943|90942846",
                 String(document.getElementById("db").value), String(document.getElementById("relation").value));
