--- a/pages/update.html
+++ b/pages/update.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>UPDATE</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -13,11 +13,18 @@
 </head>
 
 <body>
-    
+
     <div class="container">
         <h2>Update a record</h2>
 
         <form id="empForm" method="post">
+            <!-- <div class="form-group">
+                <input type="text" id="db" name="db" placeholder="Enter DataBase Name" class="form-control" required>
+                <p></p>
+                <input type="text" id="relation" name="relation" placeholder="Enter Relation Name" class="form-control"
+                    required>
+                <p></p>
+            </div> -->
             <div class="form-group">
                 <span><label for="empId">Employee ID:</label> <label id="empIdMsg">
                     </label></span>
@@ -119,7 +126,7 @@
     <div class="container">
         <button class="btn btn-primary" onclick="location.href='../index.html'">Home</button>
     </div>
-    
+
 </body>
 
 </html>
